--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              CogniChat
-bio:                'Cognitive Chat with the human factor. A Raw Infinity Initiative'
-description:        "Cognitive Chat with the human factor. A Raw Infinity Initiative"
+bio:                'Cognitive Chat. With the human factor. An Autany Robitics Initiative'
+description:        "Cognitive Chat. With the human factor. An Autany Robotics Initiative"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
