--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              CogniChat
-bio:                'Cognitive Chat. With the human factor. An Autany Robitics Initiative'
+bio:                'Cognitive Chat. With the human factor. An Autany Robotics Initiative'
 description:        "Cognitive Chat. With the human factor. An Autany Robotics Initiative"
 reading_time:       true
 words_per_minute:   200
