--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/logo.png'
 background:         
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://cognichat.github.io
+url:                https://cogni.chat
 
 # Jekyll
 permalink:          /:title/
@@ -47,14 +47,14 @@ twitter:            cognichat
 #instagram:          cognichat
 #lastfm:            cognichat
 #tumblr:            cognichat
-skype:              cognichat
+#skype:              cognichat
 #medium:            '@cognichat'
 #pinterest:         cognichat
 #foursquare:        cognichat
 #steam:              cognichat
 #dribbble:          cognichat
 #youtube:           cognichat
-#youtube-channel:   channel
+youtube-channel:   https://www.youtube.com/@cognichat
 #soundcloud:        cognichat
 #weibo:             cognichat
 #flickr:            cognichat
