--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ twitter:            cognichat
 #steam:              cognichat
 #dribbble:          cognichat
 #youtube:           cognichat
-youtube-channel:    @cognichat
+#youtube-channel:    https://www.youtube.com/@cognichat
 #soundcloud:        cognichat
 #weibo:             cognichat
 #flickr:            cognichat
