--- a/_config.yml
+++ b/_config.yml
@@ -53,8 +53,8 @@ twitter:            cognichat
 #foursquare:        cognichat
 #steam:              cognichat
 #dribbble:          cognichat
-#youtube:           cognichat
-#youtube-channel:    https://www.youtube.com/@cognichat
+youtube:           '@cognichat'
+#youtube-channel:    cognichat
 #soundcloud:        cognichat
 #weibo:             cognichat
 #flickr:            cognichat
