--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ twitter:            cognichat
 #foursquare:        cognichat
 #steam:              cognichat
 #dribbble:          cognichat
-youtube:           '@cognichat'
+#youtube:           '@cognichat'
 #youtube-channel:    cognichat
 #soundcloud:        cognichat
 #weibo:             cognichat
