--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/logo.png'
 background:         
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://cognichat.github.io/
+url:                https://cogni.chat
 
 # Jekyll
 permalink:          /:title/
@@ -71,7 +71,7 @@ gems:
   - jekyll-gist
 
 jekyll-mentions:
-    base_url: https://cognichat.github.io/
+    base_url:   https://cogni.chat
 
 # Exclude list
 exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile]
